--- a/dashboard.html
+++ b/dashboard.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-	<title></title>
+  
+	<title>Stock Management System</title>
 	<link href="style-dash.css" rel="stylesheet" />
 </head>
-<body>
-    <div class="app-container">
+<body onload="myFunction()">
+
+  <div id="preloader">
+    <div id="status">&nbsp;</div>
+  </div>
+<script>
+window.onload = function(){
+        document.querySelector("#preloader").style.display = "none";
+    }
+</script>
+
+
+    <div class="app-container" id="search">
         <div class="app-header">
           <div class="app-header-left">
             <span class="app-icon"></span>
             <p class="app-name">Stock Management System</p>
             <div class="search-wrapper">
-              <input class="search-input" type="text" placeholder="Search">
+              <input class="search-input" id="myInput" onkeyup="myFunction()" type="text" placeholder="Search">
               <i class="fa fa-search" aria-hidden="true"></i>
             </div>
           </div>
@@ -52,10 +66,14 @@
               <section>
                 <div class="wrapper">
                 <a href="" class="close">X</a>
-                <h1>Are you Admin</h1>
-                <p>On this site only Admin can Changes :)</p>
-                <button class="plus">Go on, click me.</button>
-              </div>
+                <h1>Actions</h1>
+                <p>see details</p>
+                <button class="plus">Customer Details</button>
+                <button class="plus">Stock Details</button>
+                <button class="plus">Stock Purchase</button>
+                <button class="plus">Stock Sales</button>
+                <button class="plus">Stock Entries</button>
+            </div>
                 </section>
 </div>
         </div>
@@ -96,7 +114,7 @@
             <div class="projects-section-line">
               <div class="projects-status">
                 <div class="item-status">
-                  <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='612' data-delay='5' data-increment="3"></div>
+                  <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='612' data-delay='5' data-increment="3">0</div>
                   <span class="status-type">Sale Orders</span>
                 </div>
                 <div class="item-status">
@@ -108,11 +126,11 @@
                   <span class="status-type">Item Registry</span>
                 </div>
               <div class="item-status">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='64' data-delay='5' data-increment="3"></div>
+                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='64' data-delay='5' data-increment="3">0</div>
                 <span class="status-type">Supplier Registry</span>
               </div>
             <div class="item-status">
-              <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='78' data-delay='5' data-increment="3"></div>
+              <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='78' data-delay='5' data-increment="3">0</div>
               <span class="status-type">Staff Registry</span>
             </div>
           </div>
@@ -162,7 +180,7 @@
                   <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='78' data-delay='5' data-increment="3"></div>
                 </div>
                 <div class="days-left" style="color: #ff942e;">
-                  2 Days Left
+                  <a href="#">more</a>
                 </div>
               </div>
             </div>
@@ -520,6 +538,27 @@
     }
 })(jQuery);
     </script>
+
+    
+<script>
+function myFunction() {
+    var input, filter, ul, li, a, i, img, txtValue;
+    input = document.getElementById("myInput");
+    filter = input.value.toUpperCase();
+    ul = document.getElementById("search");
+    li = ul.getElementsByTagName("p");
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+        } else {
+            li[i].style.display = "none";
+        }
+    }
+}
+</script>
+</div>
 </body>
 
 
